<resources>
    <string name="app_name">TimeToWork</string>
    <string name="new_employee_sign_up">New employee sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_button">Add Job</string>
    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="priority_string">Priority</string>
    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
    <string name="to_do_list">To Do List</string>
    <string name="department">Department</string>
    <string name="log_out">log out</string>
    <string name="add_title">Add Title</string>
    <string name="job_title">Job Title</string>
    <string name="how_to">How to?</string>
    <string name="description">Description</string>
    <string name="enter_day">Enter Day</string>
    <string name="due_date">Due Date</string>
    <string name="add">Add New Job</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="change_title">Change Title</string>
    <string name="change_description">Change Description</string>
    <string name="change_due_date">Change Due Date</string>
    <string name="delete">Delete</string>
    <string name="edit_job">Edit Job</string>
</resources>
