<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/change_title"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/title_Add"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingLeft="12dp"
                android:hint="@string/job_title"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/adddesc"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/change_description"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/desc_Add"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingLeft="12dp"
                android:hint="@string/how_to"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/adddate"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/change_due_date"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_Add"
                    android:layout_width="301dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="78dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/bginputtask"
                    android:text="@string/date"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/btnChangeDate"
                    android:layout_width="78dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="309dp"
                    android:background="@drawable/bginputtask"
                    app:srcCompat="@drawable/ic_today_black_24dp" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/priority"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/priority"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/radioGroup_change"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radhigh_change"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bghigh"
                    android:checked="true"
                    android:text="@string/high_priority" />

                <RadioButton
                    android:id="@+id/radMed_change"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bgmedium"
                    android:text="@string/med_priority" />

                <RadioButton
                    android:id="@+id/radLow_change"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bglow"
                    android:text="@string/low_priority" />

            </RadioGroup>


        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSaveUpdate"
            android:layout_width="154dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bgbtncreate"
            android:text="@string/edit_job"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.939" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="154dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bgbtncancel"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="#afadaf"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.941" />

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.DrawerLayout>