<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/addtitle"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/add_title"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/title_add"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingLeft="12dp"
                android:hint="@string/job_title"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/adddesc"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/description"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/desc_add"
                android:inputType="text"
                android:background="@drawable/bginputtask"
                android:paddingLeft="12dp"
                android:hint="@string/how_to"
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/adddate"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/due_date"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_add"
                    android:layout_width="301dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="78dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/bginputtask"
                    android:text="@string/date"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/btnChoseDate"
                    android:layout_width="78dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="309dp"
                    android:background="@drawable/bginputtask"
                    app:srcCompat="@drawable/ic_today_black_24dp" />

            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:background="@drawable/bgbtncreate"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textColor="#afadaf"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:background="@drawable/bgbtncancel"
            android:layout_width="match_parent"
            android:layout_height="55dp" />



    </LinearLayout>

    <!-- Floating action button that launches AddTaskActivity when clicked -->
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity = "start"
        app:itemTextColor="@color/darkgery"
        tools:ignore="MissingConstraints" />

</android.support.v4.widget.DrawerLayout>